--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -142,6 +142,8 @@ spec:
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
           value: "{{ .Values.clearinghouse.default.countryAlpha2Code }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ .Values.clearinghouse.default.clearinghouseConnectDisabled }}"
         {{- range $index, $clearingHouseByCountryCode := .Values.clearinghouse.regional }}
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__BASEADDRESS"
           value: "{{ $clearingHouseByCountryCode.baseAddress }}"
@@ -166,6 +168,8 @@ spec:
           value: "{{ $.Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__COUNTRYALPHA2CODE"
           value: "{{ $clearingHouseByCountryCode.countryAlpha2Code }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ $clearingHouseByCountryCode.clearinghouseConnectDisabled }}"
         {{- end }}
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}" 
@@ -209,8 +213,6 @@ spec:
           value: "{{ .Values.backend.processesworker.sdfactory.scope }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYURL"
           value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
-        - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__CONNECTORALLOWSDDOCUMENTSKIPERRORCODE"
           value: "{{ .Values.clearinghouseConnectorAllowSdDocumentSkipErrorCode }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
@@ -309,8 +311,6 @@ spec:
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type3 }}"
         - name: "CONNECTORS__SELFDESCRIPTIONDOCUMENTURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
-        - name: "CONNECTORS__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "DOCUMENT__ENABLESEEDENDPOINT"
           value: "True"
         - name: "DOCUMENT__FRAMEDOCUMENTTYPEIDS__0"
@@ -484,8 +484,6 @@ spec:
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHelpPath }}"
         - name: "REGISTRATION__USEDIMWALLET"
           value: "{{ .Values.backend.useDimWallet }}"
-        - name: "REGISTRATION__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
         - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGINDEX"
