fix: removed clearinghouse settings from maintenance job
- removed retriggerEndClearinghouseIntervalInDays from values
- removed RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS from CLEARINGHOUSE template
- set batchProcessing.deleteDocuments.days value
- set batchProcessing.retriggerClearinghouse.days value

--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -71,35 +71,10 @@ spec:
               {{- end }}
               - name: "PROCESSIDENTITY__PROCESSUSERID"
                 value: "{{ .Values.backend.portalmaintenance.processIdentity.processUserId }}"
-              - name: "BATCHDELETE_DELETEINTERVALINDAYS"
-                value: "{{ .Values.backend.portalmaintenance.batchDelete.days }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
-                value: "{{ .Values.clearinghouse.default.baseAddress }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__VALIDATIONPATH"
-                value: "{{ .Values.clearinghouse.default.apiPath }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
-                value: "{{ .Values.clearinghouse.default.clientId }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
-                valueFrom:
-                  secretKeyRef:
-                    name: "{{ .Values.backend.interfaces.secret }}"
-                    key: "clearinghouse-client-secret-default"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
-                value: "{{ .Values.clearinghouse.default.grantType }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
-                value: "{{ .Values.clearinghouse.default.tokenAddress }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
-                value: "{{ .Values.backend.placeholder }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
-                value: "{{ .Values.clearinghouse.default.scope }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
-                value: "{{ .Values.backend.placeholder }}"
-              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
-                value: "{{ .Values.clearinghouse.default.countryAlpha2Code }}"
-              - name: "CLEARINGHOUSE__CALLBACKURL"
-                value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
-              - name: "CLEARINGHOUSE__RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS"
-                value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
+              - name: "BATCHPROCESSING_DELETEDOCUMENTSINTERVALINDAYS"
+                value: "{{ .Values.backend.portalmaintenance.batchProcessing.deleteDocuments.days }}"
+              - name: "BATCHPROCESSING_RETRIGGERCLEARINGHOUSEINTERVALINDAYS"
+                value: "{{ .Values.backend.portalmaintenance.batchProcessing.retriggerClearinghouse.days }}"
               - name: "SERILOG__MINIMUMLEVEL__Default"
                 value: "{{ .Values.backend.portalmaintenance.logging.default }}"
             ports:
