feat(sd-toggle): region specific SD toggle (#539)
* removed clearinghouse settings from maintenance job
* removed retriggerEndClearinghouseIntervalInDays from values
* removed RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS from CLEARINGHOUSE template
* set batchProcessing.deleteDocuments.days value
* set batchProcessing.retriggerClearinghouse.days value

---------

Refs: #531
Co-authored-by: Karsten Thiems <karsten.thiems@cofinity-x.com>
Reviewed-by: Phil Schneider <info@philschneider.de>

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -119,31 +119,60 @@ spec:
           value: "{{ .Values.backend.processesworker.bpdm.startSharingStateAsReady }}"
         - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
           value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
-          value: "{{ .Values.clearinghouseAddress }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
-          value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
+          value: "{{ .Values.clearinghouse.default.baseAddress }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__VALIDATIONPATH"
+          value: "{{ .Values.clearinghouse.default.apiPath }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
+          value: "{{ .Values.clearinghouse.default.clientId }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
-              key: "clearinghouse-client-secret"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__GRANTTYPE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__TOKENADDRESS"
-          value: "{{ .Values.clearinghouseTokenAddress }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__PASSWORD"
+              key: "clearinghouse-client-secret-default"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
+          value: "{{ .Values.clearinghouse.default.grantType }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
+          value: "{{ .Values.clearinghouse.default.tokenAddress }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__SCOPE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USERNAME"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
+          value: "{{ .Values.clearinghouse.default.scope }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
+          value: "{{ .Values.clearinghouse.default.countryAlpha2Code }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ .Values.clearinghouse.default.clearinghouseConnectDisabled }}"
+        {{- range $index, $clearingHouseByCountryCode := .Values.clearinghouse.regional }}
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__BASEADDRESS"
+          value: "{{ $clearingHouseByCountryCode.baseAddress }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__VALIDATIONPATH"
+          value: "{{ $clearingHouseByCountryCode.apiPath }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLIENTID"
+          value: "{{ $clearingHouseByCountryCode.clientId }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLIENTSECRET"
+          valueFrom:
+            secretKeyRef:
+              name: "{{ $.Values.backend.interfaces.secret }}"
+              key: "clearinghouse-client-secret-{{ $index }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__GRANTTYPE"
+          value: "{{ $clearingHouseByCountryCode.grantType }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__TOKENADDRESS"
+          value: "{{ $clearingHouseByCountryCode.tokenAddress }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__PASSWORD"
+          value: "{{ $.Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__SCOPE"
+          value: "{{ $clearingHouseByCountryCode.scope }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__USERNAME"
+          value: "{{ $.Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__COUNTRYALPHA2CODE"
+          value: "{{ $clearingHouseByCountryCode.countryAlpha2Code }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLEARINGHOUSECONNECTDISABLED"
+          value: "{{ $clearingHouseByCountryCode.clearinghouseConnectDisabled }}"
+        {{- end }}
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}" 
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USEDIMWALLET"
-          value: "{{ .Values.backend.useDimWallet }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__RETRIGGERENCLEARINGHOUSEINTERVALINDAYS"
-          value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__MEMBERSHIPERRORMESSAGE"
           value: "{{ .Values.backend.processesworker.custodian.membershipErrorMessage }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
@@ -182,8 +211,6 @@ spec:
           value: "{{ .Values.backend.processesworker.sdfactory.scope }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__SDFACTORYURL"
           value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
-        - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__CONNECTORALLOWSDDOCUMENTSKIPERRORCODE"
           value: "{{ .Values.clearinghouseConnectorAllowSdDocumentSkipErrorCode }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
@@ -282,8 +309,6 @@ spec:
           value: "{{ .Values.backend.administration.connectors.validCertificationContentTypes.type3 }}"
         - name: "CONNECTORS__SELFDESCRIPTIONDOCUMENTURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.administration.connectors.selfDescriptionDocumentPath }}"
-        - name: "CONNECTORS__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "DOCUMENT__ENABLESEEDENDPOINT"
           value: "True"
         - name: "DOCUMENT__FRAMEDOCUMENTTYPEIDS__0"
@@ -457,8 +482,6 @@ spec:
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHelpPath }}"
         - name: "REGISTRATION__USEDIMWALLET"
           value: "{{ .Values.backend.useDimWallet }}"
-        - name: "REGISTRATION__CLEARINGHOUSECONNECTDISABLED"
-          value: "{{ .Values.clearinghouseConnectDisabled }}"
         - name: "SERVICEACCOUNT__CLIENTID"
           value: "{{ .Values.backend.administration.serviceAccount.clientId }}"
         - name: "SERVICEACCOUNT__ENCRYPTIONCONFIGINDEX"
