--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -157,31 +157,60 @@ spec:
               value: "{{ .Values.backend.processesworker.bpdm.startSharingStateAsReady }}"
             - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
               value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__BASEADDRESS"
-              value: "{{ .Values.clearinghouseAddress }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTID"
-              value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CLIENTSECRET"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
+              value: "{{ .Values.clearinghouse.default.baseAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__VALIDATIONPATH"
+              value: "{{ .Values.clearinghouse.default.apiPath }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
+              value: "{{ .Values.clearinghouse.default.clientId }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "clearinghouse-client-secret"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__GRANTTYPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__TOKENADDRESS"
-              value: "{{ .Values.clearinghouseTokenAddress }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__PASSWORD"
+                  key: "clearinghouse-client-secret-default"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
+              value: "{{ .Values.clearinghouse.default.grantType }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
+              value: "{{ .Values.clearinghouse.default.tokenAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__SCOPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USERNAME"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
+              value: "{{ .Values.clearinghouse.default.scope }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
+              value: "{{ .Values.clearinghouse.default.countryAlpha2Code }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLEARINGHOUSECONNECTDISABLED"
+              value: "{{ .Values.clearinghouse.default.clearinghouseConnectDisabled }}"
+            {{- range $index, $clearingHouseByCountryCode := .Values.clearinghouse.regional }}
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__BASEADDRESS"
+              value: "{{ $clearingHouseByCountryCode.baseAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__VALIDATIONPATH"
+              value: "{{ $clearingHouseByCountryCode.apiPath }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLIENTID"
+              value: "{{ $clearingHouseByCountryCode.clientId }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLIENTSECRET"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ $.Values.backend.interfaces.secret }}"
+                  key: "clearinghouse-client-secret-{{ $index }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__GRANTTYPE"
+              value: "{{ $clearingHouseByCountryCode.grantType }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__TOKENADDRESS"
+              value: "{{ $clearingHouseByCountryCode.tokenAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__PASSWORD"
+              value: "{{ $.Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__SCOPE"
+              value: "{{ $clearingHouseByCountryCode.scope }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__USERNAME"
+              value: "{{ $.Values.backend.placeholder }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__COUNTRYALPHA2CODE"
+              value: "{{ $clearingHouseByCountryCode.countryAlpha2Code }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLEARINGHOUSECONNECTDISABLED"
+              value: "{{ $clearingHouseByCountryCode.clearinghouseConnectDisabled }}"
+            {{- end }}
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
               value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__USEDIMWALLET"
-              value: "{{ .Values.backend.useDimWallet }}"
-            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS"
-              value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__BASEADDRESS"
               value: "{{ .Values.custodianAddress }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__MEMBERSHIPERRORMESSAGE"
@@ -222,8 +251,6 @@ spec:
               value: "{{ .Values.sdfactoryAddress }}{{ .Values.backend.processesworker.sdfactory.selfdescriptionPath }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
-            - name: "APPLICATIONCHECKLIST__SDFACTORY__CLEARINGHOUSECONNECTDISABLED"
-              value: "{{ .Values.clearinghouseConnectDisabled }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__CONNECTORALLOWSDDOCUMENTSKIPERRORCODE"
               value: "{{ .Values.clearinghouseConnectorAllowSdDocumentSkipErrorCode }}"
             - name: "APPLICATIONCHECKLIST__DIM__USERNAME"
