feat(auto-setup): add encryption key for auto setup auth (#498)
https://github.com/eclipse-tractusx/portal-backend/issues/1151

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -470,6 +470,19 @@ spec:
               value: "{{ .Values.backend.processesworker.offerprovider.scope }}"
             - name: "OFFERPROVIDER__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
+            - name: "OFFERPROVIDER__ENCRYPTIONCONFIGINDEX"
+              value: "{{ .Values.backend.processesworker.offerprovider.encryptionConfigIndex }}"
+            - name: "OFFERPROVIDER__ENCRYPTIONCONFIGS__0__INDEX"
+              value: "{{ .Values.backend.processesworker.offerprovider.encryptionConfigs.index0.index}}"
+            - name: "OFFERPROVIDER__ENCRYPTIONCONFIGS__0__CIPHERMODE"
+              value: "{{ .Values.backend.processesworker.offerprovider.encryptionConfigs.index0.cipherMode}}"
+            - name: "OFFERPROVIDER__ENCRYPTIONCONFIGS__0__PADDINGMODE"
+              value: "{{ .Values.backend.processesworker.offerprovider.encryptionConfigs.index0.paddingMode}}"
+            - name: "OFFERPROVIDER__ENCRYPTIONCONFIGS__0__ENCRYPTIONKEY"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "offerprovider-encryption-key0"
             - name: "PROCESSIDENTITY__PROCESSUSERID"
               value: "{{ .Values.backend.processesworker.processIdentity.processUserId }}"
             - name: "ONBOARDINGSERVICEPROVIDER__ENCRYPTIONCONFIGINDEX"
