--- a/environments/helm-values/values-int.yaml
+++ b/environments/helm-values/values-int.yaml
@@ -262,6 +262,9 @@ backend:
     offerprovider:
       clientId: "<path:portal/data/portal-iam-clientIds#offerprovider-client-id>"
       clientSecret: "<path:portal/data/int/iam/centralidp-client-secrets#offerprovider-sa>"
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/int/encryption-keys#offerprovider-encryption-key0>"
     onboardingServiceProvider:
       encryptionConfigs:
         index0:
