--- a/environments/helm-values/values-stable.yaml
+++ b/environments/helm-values/values-stable.yaml
@@ -250,6 +250,9 @@ backend:
     offerprovider:
       clientId: "<path:portal/data/portal-iam-clientIds#offerprovider-client-id>"
       clientSecret: "<path:portal/data/stable/iam/centralidp-client-secrets#offerprovider-sa>"
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/stable/encryption-keys#offerprovider-encryption-key0>"
     onboardingServiceProvider:
       encryptionConfigs:
         index0:
