--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -223,7 +223,7 @@ frontend:
     name: "assets"
     image:
       name: "docker.io/tractusx/portal-assets"
-      assetstag: 3d0f5a77ea46917e6aac7e541f798b58b8a51777
+      assetstag: v2.4.0
       pullPolicy: "IfNotPresent"
       # -- Pull secrets for private docker registry
       pullSecrets: []
