--- a/charts/portal/Chart.yaml
+++ b/charts/portal/Chart.yaml
@@ -20,8 +20,8 @@
 apiVersion: v2
 name: portal
 type: application
-version: 2.5.0-RC2
-appVersion: 2.5.0-RC2
+version: 2.5.0
+appVersion: 2.5.0
 description: Helm chart for Catena-X Portal
 home: https://github.com/eclipse-tractusx/portal
 sources:
