feat:provide issuer did to frontend registration

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -104,6 +104,9 @@ clearinghouse:
 # -- Provide issuer component base address
 issuerComponentAddress: "https://ssi-credential-issuer.example.org"
 
+# -- Provide issuer DID
+issuerdid: "did:web:example.org:test123"
+
 # -- Provide details about the BPN DID Resolver.
 bpnDidResolver:
   # -- Provide management api base address
@@ -450,7 +453,6 @@ backend:
         type0: "PDF"
       companyCertificateMediaTypes:
         type0: "PDF"
-    issuerdid: "did:web:example.org:test123"
     connectors:
       validCertificationContentTypes:
         type0: "application/x-pem-file"
