feat:Added configuration for universal did resolver and restriction of user role when BYOW is used

--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -203,6 +203,10 @@ spec:
           value: "{{ .Values.backend.registration.registrationDocumentTypeIds.type0 }}"
         - name: "REGISTRATION__SUBMITDOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.registration.submitDocumentTypeIds.type0 }}"
+        - name: "UNIVERSALDIDRESOLVER__UNIVERSALRESOLVERADDRESS"
+          value: "{{ .Values.backend.registration.universalResolverAddress }}"
+        - name: "BRINGYOUROWNWALLET__NONAAPPLICABLEUSERROLES__0"
+          value: "{{ .Values.backend.registration.bringYourOwnWallet.nonApplicableUserRoles.role0 }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
           value: "{{ .Values.backend.processesworker.mailing.encryptionConfigIndex }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__INDEX"
