--- a/charts/portal/templates/deployment-frontend-registration.yaml
+++ b/charts/portal/templates/deployment-frontend-registration.yaml
@@ -65,7 +65,7 @@ spec:
           - name: CLIENT_ID_REGISTRATION
             value: "{{ .Values.centralidp.clients.registration }}"
           - name: ISSUER_ID
-            value: "{{ .Values.issuerdid }}"
+            value: "{{ .Values.backend.administration.issuerdid }}"
         ports:
         - name: http
           containerPort: {{ .Values.portContainer }}
