build(2.6.0-RC2): change bitnami image repository

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -1040,6 +1040,8 @@ postgresql:
   enabled: true
   # -- Setting image tag to major to get latest minor updates
   image:
+    registry: docker.io
+    repository: bitnamilegacy/postgresql
     tag: "15-debian-11"
   commonLabels:
     app.kubernetes.io/version: "15"
