--- a/charts/localdev/values.yaml
+++ b/charts/localdev/values.yaml
@@ -276,6 +276,10 @@ portal:
                 port: 8080
   postgresql:
     nameOverride: "portal-backend-postgresql"
+    image:
+      registry: docker.io
+      repository: bitnamilegacy/postgresql
+      tag: "15-debian-11"
     architecture: standalone
     auth:
       password: "dbpasswordportal"
@@ -350,6 +354,8 @@ centralidp:
         - clientId: "sa-cl2-04"
           clientSecret: "changeme"
         - clientId: "sa-cl2-05"
+          clientSecret: "changeme"
+        - clientId: "sa-cl2-06"
           clientSecret: "changeme"
         - clientId: "sa-cl3-cx-1"
           clientSecret: "changeme"
