--- a/.github/workflows/portal-chart-test.yaml
+++ b/.github/workflows/portal-chart-test.yaml
@@ -37,7 +37,7 @@ on:
         type: string
       upgrade_from:
         description: 'portal chart version to upgrade from'
-        # portal version from 24.12 release
+        # portal version from 25.6 release
         default: '2.5.0'
         required: false
         type: string
@@ -95,12 +95,14 @@ jobs:
           helm uninstall portal --namespace install
         if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
 
-      #   # Upgrade the released portal chart version with the locally available chart
-      # - name: Run helm upgrade
-      #   run: |
-      #     helm repo add bitnami https://charts.bitnami.com/bitnami
-      #     helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
-      #     helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from || '2.3.0' }} --set replicaCount=1 --set postgresql.architecture=standalone --wait --wait-for-jobs --namespace upgrade --create-namespace
-      #     helm dependency update charts/portal
-      #     helm upgrade portal charts/portal --set replicaCount=1 --set postgresql.architecture=standalone --wait --wait-for-jobs --namespace upgrade
-      #   if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
+        # Upgrade the released portal chart version with the locally available chart
+      - name: Run helm upgrade
+        run: |
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add tractusx-dev https://eclipse-tractusx.github.io/charts/dev
+          helm install portal tractusx-dev/portal --version ${{ github.event.inputs.upgrade_from || '2.5.0' }} \
+            --set replicaCount=1 --set postgresql.architecture=standalone --set postgresql.image.repository=bitnamilegacy/postgresql \
+            --wait --wait-for-jobs --namespace upgrade --create-namespace
+          helm dependency update charts/portal
+          helm upgrade portal charts/portal --set replicaCount=1 --set postgresql.architecture=standalone --wait --wait-for-jobs --namespace upgrade
+        if: github.event_name != 'pull_request' || steps.list-changed.outputs.changed == 'true'
