--- a/charts/localdev/Chart.yaml
+++ b/charts/localdev/Chart.yaml
@@ -37,11 +37,11 @@ dependencies:
   - condition: centralidp.enabled
     name: centralidp
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 4.2.0
+    version: 4.2.1-rc.1
   - condition: sharedidp.enabled
     name: sharedidp
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 4.2.0
+    version: 4.2.1-rc.1
   - condition: pgadmin4.enabled
     name: pgadmin4
     repository: https://helm.runix.net
