--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -223,7 +223,7 @@ frontend:
     name: "assets"
     image:
       name: "docker.io/tractusx/portal-assets"
-      assetstag: fcdf7ce36f7cb8b547fcd1364404beff09a82112
+      assetstag: v2.6.0
       pullPolicy: "IfNotPresent"
       # -- Pull secrets for private docker registry
       pullSecrets: []
